--- a/Race registration.html
+++ b/Race registration.html
@@ -42,17 +42,13 @@
         </div>
        <section>
 
-           <label for="email" value="password" <!--style="color:red"--> >Email</label>
+           <label for="email" value="password"<!--style="color:red"--> </label>
            <input type="Email" id="email" required>
            <label for="password ">password:</label>
            <input type="password" id="password" minlength="8" maxlength="20" name="password"required>
 
        </section>
-      <style>
-          password{
-              color:seagreen;s
-          }
-      </style>
+     
 
     <div>
         <label for="age">Select Age Group</label>
