--- a/emmet.html
+++ b/emmet.html
@@ -3,10 +3,59 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Emment Demo</title>
+    <title>Emmet Demo</title>
 </head>
 <body>
-    main>header>
+    <main>
+        <header>
+            <h3><!--child emmet--></h3>
+        </header>
+    </main>
     
+    <!--sibling emmet-->
+    <ul></ul>
+    <li></li>
+    <ul></ul>
+    <li></li>
+
+    <!--multiplication emmet-->
+    <ul>
+        <li>
+            <ul></ul>
+            <ul></ul>
+            <ul></ul>
+        </li>
+        <li>
+            <ul></ul>
+            <ul></ul>
+            <ul></ul>
+        </li>
+        <li>
+            <ul></ul>
+            <ul></ul>
+            <ul></ul>
+        </li>
+        <li>
+            <ul></ul>
+            <ul></ul>
+            <ul></ul>
+        </li>
+        <li>
+            <ul></ul>
+            <ul></ul>
+            <ul></ul>
+        </li>
+    </ul>
+
+    <!--item numbering-->
+    <nav>
+        <ul>
+            <li><a href="1"></a></li>
+            <li><a href="2"></a></li>
+            <li><a href="3"></a></li>
+            <li><a href="4"></a></li>
+            <li><a href="5"></a></li>
+        </ul>
+    </nav>
 </body>
 </html>
