--- a/selectors.html
+++ b/selectors.html
@@ -12,11 +12,12 @@
     <form action="">
     <label for="search">Search</label>
     <input type="search" placeholder="search" id="search">
+    <input type="password"placeholder="password">
 
     <button>login</button>
     <button id="signup">signup</button>
 
-    <div>
+    <div class="me">
         <h1>Trending Song</h1>
         <p>
             check this out 
@@ -24,18 +25,18 @@
 
         </p>
     </div>
-    <div>
-        <h2>hey!! check out my favourite Song</h2>
-    <p> 
+    <div class="me">
+        <h2>hey!! check out my favourite <span>Song</span></h2>
         <button>+vote</button>
         <hr>
+    <p> 
         here !! check this out
         <a href="https://www.youtube.com/watch?v=3dW6hTdyYSA">Mere wala sardar-Jugraj Sandhu</a>
     </p>
     </div>
 
-    <div>
-        <h3>Happy Birthday to the coolest and the smartest singer with the sexiest voice!!</h3>
+    <div class="me">
+        <h3>Happy Birthday to the coolest and the smartest singer with the <span>sexiest voice!!</span></h3>
         <button>+vote</button>
         <hr>
         <p>
@@ -44,7 +45,7 @@
         </p>
     </div>
     <div>
-        <h2>Now!! the top on my list of favourite singers-----Mankirat Aulakh </h2>
+        <h2>Now!! the top on my list of favourite singers-----<span class="tag">Mankirat Aulakh</span> </h2>
         <button>+vote</button>
         <hr>
         <p>here!! check this out
@@ -57,6 +58,7 @@
                 <li><a href="https://www.facebook.com/MankirtAulakh/">facebook page</a></li>
                 <li><a href="https://twitter.com/mankirtaulakh?lang=en#:~:text=MANKIRT%20AULAKH%20(%40mankirtaulakh)%20%7C%20Twitter">twitter handle</a></li>
             </ul>
+            <a href="extra.com">extra</a>
         </div>
     </div>
 </form>
