--- a/box_model.html
+++ b/box_model.html
@@ -26,14 +26,16 @@
     <div class="five">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum, quis, itaque iusto vitae fugit ipsam dolor asperiores sequi illum earum totam obcaecati error consequatur eum? Doloribus sapiente cupiditate mollitia enim.
     </div>
-    <div>
+    <div class="six">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum, quis, itaque iusto vitae fugit ipsam dolor asperiores sequi illum earum totam obcaecati error consequatur eum? Doloribus sapiente cupiditate mollitia enim.
     </div>
-    <div>
+    <div class="seven">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum, quis, itaque iusto vitae fugit ipsam dolor asperiores sequi illum earum totam obcaecati error consequatur eum? Doloribus sapiente cupiditate mollitia enim.
     </div>
-    <div>
+    <div class="eight">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum, quis, itaque iusto vitae fugit ipsam dolor asperiores sequi illum earum totam obcaecati error consequatur eum? Doloribus sapiente cupiditate mollitia enim.
     </div>
+
+    <button>Pad Me!!</button>
 </body>
 </html>
