--- a/display.html
+++ b/display.html
@@ -31,6 +31,10 @@
     Debitis nisi reprehenderit facilis id ratione possimus nulla suscipit nihil ut? Nemo voluptate laudantium amet magnam repellendus sequi adipisci deleniti asperiores quos. Sint sunt tempora reprehenderit fugiat veniam atque ut.
 
     </p>
+
+    <div></div>
+    <div></div>
+    <div></div>
     
 
 </body>
