--- a/position.html
+++ b/position.html
@@ -9,25 +9,52 @@
 </head>
 <body>
 
+    <h1>Position Property</h1>
+
     <section id="static">
         <h2>static position</h2>
-        <div id="first"></div>
-        <div id="second"></div>
-        <div id="third"></div>
+        <div ></div>
+        <div id=middle></div>
+        <div ></div>
     </section>
 
     <section id="relative">
         <h2>relative position</h2>
-        <div id="first"></div>
-        <div id="second"></div>
-        <div id="third"></div>
+        <div ></div>
+        <div id=middle></div>
+        <div "></div>
     </section>
 
     <section id="absolute">
         <h2>abolute position</h2>
-        <div id="first"></div>
-        <div id="second"></div>
-        <div id="third"></div>
+        <div ></div>
+        <div id=middle></div>
+        <div ></div>
+    </section>
+
+    <section id="fixed">
+        <h2>fixed position</h2>
+        <div ></div>
+        <div id=middle></div>
+        <div ></div>
+    </section>
+
+    <section id="sticky">
+        <h2>sticky position</h2>
+        <div ></div>
+        <div id=middle>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloremque, quidem quaerat ipsam nam in pariatur dolores quod deserunt nobis voluptates dignissimos ullam alias vero beatae quibusdam! Error vitae cupiditate laborum!
+            Veritatis natus quisquam totam? Itaque voluptatem sit suscipit saepe ipsa deleniti quibusdam delectus, cumque quos corporis! Beatae, dignissimos odio, rem, ad accusamus saepe ut similique optio cum facilis quia vitae!
+            Similique fugiat voluptates vero sequi ratione. Cumque reprehenderit, sunt et voluptatibus soluta nisi minus voluptates id nulla reiciendis harum autem perferendis ut modi vero laboriosam a facere, dicta adipisci illo?
+            Amet sequi architecto sit et exercitationem? Cumque omnis, assumenda tempora, molestias aliquid, itaque vitae odit magni animi rem fugiat. Animi ad, totam placeat harum iste eaque consequatur ea provident illum?
+            Amet totam veritatis eaque, minus temporibus quos, itaque voluptates aliquid, nihil ullam sequi laborum dolores? Accusamus labore itaque molestiae obcaecati. Nostrum, deserunt itaque tempora ex fuga quidem blanditiis magni iure!
+            Quisquam non at illo quod eum reprehenderit nam voluptatum quae expedita vero sunt blanditiis assumenda atque molestiae ratione eveniet a, cupiditate consectetur deserunt dolor enim officia, quia natus beatae? Perspiciatis.
+            Dolor impedit omnis, nesciunt iste voluptates ad nostrum, unde pariatur alias natus, architecto similique. Officia assumenda aspernatur fugiat. Reprehenderit expedita exercitationem eius sunt voluptatum, modi nam natus saepe perspiciatis sequi.
+            Quibusdam quam laborum, velit sunt alias cupiditate deserunt nisi vel eos rerum unde praesentium fuga exercitationem quod dolorum repellendus minus ipsa in culpa? Repellat ex officia necessitatibus, autem fuga nulla?
+            Fuga eos ab porro consequuntur accusantium voluptate nemo minima vero accusamus sit, magnam inventore non rem debitis ipsum exercitationem ad nam provident! Ex voluptate tempora neque quia accusantium quaerat magnam.
+            Sequi quam fuga tempora perferendis ducimus. Vel laudantium dicta nobis. Blanditiis placeat corrupti cupiditate ipsam mollitia? Eveniet mollitia assumenda, magni aliquid voluptatibus perferendis provident, dicta officiis quia aut voluptas atque.</p>
+        </div>
+        <div ></div>
     </section>
     
 </body>
