--- a/transition.html
+++ b/transition.html
@@ -5,11 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Transition Property</title>
+    <link rel="stylesheet" href="transition_styling.css">
 </head>
 <body>
     <h1>Transition Property</h1>
         <div class="circle">
 
-        </div>    
+        </div>   
+        
+        <section>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </section>
 </body>
 </html>
