--- a/flexbox.html
+++ b/flexbox.html
@@ -19,5 +19,12 @@
     <div style="background-color: #FFA900;"></div>
     <div style="background-color: #e93838;"></div>
     </section>  
+
+    <h2>Another Example</h2>
+    <main>
+        <section class=sidebar></section>
+        <section class=mainContent></section>
+        <section class="sidebar"></section>
+    </main>
 </body>
 </html>
