--- a/bootstrap_basics.html
+++ b/bootstrap_basics.html
@@ -9,9 +9,10 @@
 </head>
 <body>
     <div class="container-fluid">
-    <h1>
-        Placeholder
+    <h1 class="display-1">
+        Bootstrap Playground
     </h1>
+    <h2 class="display-2">Buttons</h2>
     <button type="button" class="btn btn-primary">Primary</button>
     <button>Casual</button>
     <button class="btn btn-success">Success</button>
@@ -21,6 +22,8 @@
     <button class="btn btn-info btn-lg">Large info button</button>
     <button class ="btn btn-danger disabled">Danger Disabled</button>
     <button class="btn btn-outline-info btn-sm">Small Outline Info</button>
+
+    <h2 class="display-2">Topography</h2>
     <p>
     Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci neque minima atque, fuga nihil, quia iste nam asperiores eveniet molestiae iure consequuntur alias ipsam? Non impedit doloribus veniam veritatis expedita.
     Suscipit officia eum ea dicta optio nam cupiditate laboriosam eligendi aspernatur atque nobis delectus minus eveniet cum voluptatem animi magni placeat aliquid excepturi, eaque facilis. Iusto, officia expedita. Consectetur, eos.
