--- a/todo.html
+++ b/todo.html
@@ -17,7 +17,7 @@
         <ol>"quit " - Quit app</ol>
     </ul>
 
-   <!--<script src="todo.js"></script>--> 
+   <script src="todo.js"></script> 
 
 </body>
 </html>
